2004-01-10  J.H.M. Dassen (Ray) <jdassen@debian.org>

	http://bugs.debian.org/226560

	* providers/sqlite/gda-sqlite-provider.c: #include <gda-util.h> to
	have gda_type_to_string declared. This fixes pointer/integer issues on
	64-bit architectures, in particular IA64.

2004-01-09  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #130945

	* providers/odbc/gda-odbc-provider.c (process_sql_commands): use
	correct counter.

2004-01-09  Jon Willeke <willeke@users.sourceforge.net>

	Fixes #130938

	* providers/odbc/gda-odbc-provider.c: added support for NAMESPACES.

2004-01-02  Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-util.c (gda_file_save): added O_TRUNC flag.

2003-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-command.c (gda_command_copy): dont use C99.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_get_data_source_list): fixed
	documentation typo.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-error.[ch] (gda_error_get_number): removed 'const' from
	function's return type.

2003-12-17  Laurent Sansonetti <lrz@gnome.org>

	* providers/bdb/gda-bdb.h:
	Introduced BDB_VERSION macro.

	* providers/bdb/gda-bdb-provider.c:
	* providers/bdb/gda-bdb-recordset.c:
	- Fixed a compilation bug when using BDB < 4.1.24 ;
	- get_server_version handler uses DB_VERSION_STRING.

2003-12-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: disable MySQL provider until we resolve the licensing
	issues.

2003-12-14  Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-connection.c, libgda/gda-data-model.c
	* libgda/gda-export.c, libgda/gda-value.c:
	Fixed some typos in the doc.

2003-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #128933

	* libgda/gda-log.[ch] (gda_log_clean_*): removed unimplemented
	functions.

2003-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #128929

	* libgda/gda-client.h: added missing space in function prototype
	that confuses pygtk's h2def.py.
